<resources>
    <string name="app_name">Figma3</string>
    <string name="add_card_text">Добавить карту</string>
    <string name="number_card_text">Номер карты</string>
    <string name="cvc_text">CVC</string>
    <string name="term_text">00/00</string>
    <string name="name_card_text">Имя на карте</string>
    <string name="save_card_text">Сохранить карту</string>
    <string name="about_card_text">Карта появится в списке карт</string>
    <string name="add_text">Добавить</string>
    <string name="cloud_payments_text">Мы храним и не обрабатываем данные банковских карт. Все операции защищены Cloud Payments</string>
</resources>