<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog"
    android:paddingBottom="30dp"
    android:id="@+id/bottomSheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="46dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_dialog"
            android:theme="@style/Theme.AppCompat.NoActionBar"
            tools:context=".MainActivity">

            <View
                android:id="@+id/bottom_sheet"
                android:layout_width="33dp"
                android:layout_height="6dp"
                android:layout_marginLeft="171dp"
                android:layout_marginRight="171dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_path_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/numberTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="167dp"
                android:text="@string/add_card_text"
                android:textAppearance="@style/add_card_text"
                app:layout_constraintTop_toBottomOf="@+id/bottom_sheet"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:id="@+id/numbercardEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="166dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_et_bck"
                android:hint="@string/number_card_text"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="#050505"
                android:textColorHint="#5C5C5C"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableRight="@drawable/ic_vector"/>


            <EditText
                android:id="@+id/termEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_et_bck"
                android:hint="@string/term_text"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="#050505"
                android:textColorHint="#5C5C5C"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numbercardEt" />

            <EditText
                android:id="@+id/cvcEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="155dp"
                android:background="@drawable/shape_et_bck"
                android:hint="@string/cvc_text"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="#050505"
                android:textColorHint="#5C5C5C"
                app:layout_constraintLeft_toRightOf="@id/termEt"
                app:layout_constraintTop_toBottomOf="@+id/numbercardEt" />

            <EditText
                android:id="@+id/namecardEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="294dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_et_bck"
                android:hint="@string/name_card_text"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#050505"
                android:textColorHint="#5C5C5C"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/savecardTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="272dp"
                android:layout_marginLeft="25dp"
                android:text="@string/save_card_text"
                android:textAppearance="@style/save_card_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namecardEt" />
            <TextView
                android:id="@+id/aboutcardTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:text="@string/about_card_text"
                android:textAppearance="@style/about_card_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/savecardTv"/>

            <Button
                android:id="@+id/addBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_add_bck"
                android:padding="12dp"
                android:text="@string/add_text"
                android:textAppearance="@style/add_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutcardTv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/cloudpaymentsTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:text="@string/cloud_payments_text"
                android:textAppearance="@style/about_card_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBtn" />

            <View
                android:id="@+id/rectangle"
                android:layout_width="134dp"
                android:layout_height="5dp"
                android:layout_marginLeft="121dp"
                android:layout_marginRight="121dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_rectangle"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloudpaymentsTv"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="267dp"
                android:layout_marginRight="25dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/namecardEt"
                android:theme="@style/MySwitch"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>